[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/TileSets/TileMapMain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Collidable/RockA.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UnitTest/AudioTrigger.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 592.208, 5.56299 )

[node name="World" type="Node2D"]

[node name="Player" parent="." instance=ExtResource( 1 )]
switch_diagonal_animation = true
speed = 200

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="TileMapMain" parent="." instance=ExtResource( 3 )]
position = Vector2( -6.0278, 26.1714 )

[node name="RockA" parent="TileMapMain" instance=ExtResource( 4 )]
position = Vector2( -482.621, 1262.5 )

[node name="RockA2" parent="TileMapMain" instance=ExtResource( 4 )]
position = Vector2( -559.803, 1262.1 )

[node name="MusicAreas" type="Node" parent="."]

[node name="AudioTrigger" type="Area2D" parent="MusicAreas"]
position = Vector2( 69.7205, 70.6522 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicAreas/AudioTrigger"]
position = Vector2( -96.3538, 1184.14 )
shape = SubResource( 1 )
one_way_collision = true
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="MusicAreas/AudioTrigger"]
one_shot = true
[connection signal="body_entered" from="MusicAreas/AudioTrigger" to="MusicAreas/AudioTrigger" method="_on_AudioTrigger_body_entered"]
[connection signal="body_exited" from="MusicAreas/AudioTrigger" to="MusicAreas/AudioTrigger" method="_on_AudioTrigger_body_exited"]
[connection signal="timeout" from="MusicAreas/AudioTrigger/Timer" to="MusicAreas/AudioTrigger" method="_on_Timer_timeout"]
